antlr4-runtime/MiniLangParser.cpp

// Generated from c:/Users/kck03/Desktop/CPT316-Simple-Compiler/MiniLang.g4 by ANTLR 4.13.1


#include "MiniLangVisitor.h"

#include "MiniLangParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct MiniLangParserStaticData final {
  MiniLangParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  MiniLangParserStaticData(const MiniLangParserStaticData&) = delete;
  MiniLangParserStaticData(MiniLangParserStaticData&&) = delete;
  MiniLangParserStaticData& operator=(const MiniLangParserStaticData&) = delete;
  MiniLangParserStaticData& operator=(MiniLangParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag minilangParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
MiniLangParserStaticData *minilangParserStaticData = nullptr;

void minilangParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (minilangParserStaticData != nullptr) {
    return;
  }
#else
  assert(minilangParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<MiniLangParserStaticData>(
    std::vector<std::string>{
      "program", "statement", "assignment", "output", "input", "ifStatement", 
      "whileLoop", "expression", "condition", "relop"
    },
    std::vector<std::string>{
      "", "'='", "'p'", "'r'", "'if'", "'else'", "'while'", "'!'", "'&&'", 
      "'||'", "'>'", "'<'", "'>='", "'<='", "'=='", "'!='", "", "", "", 
      "", "", "", "'+'", "'-'", "'*'", "'/'", "'**'", "';'", "'('", "')'", 
      "'{'", "'}'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "IDENTIFIER", 
      "INT", "DOUBLE", "STRING", "COMMENT", "WS", "ADD", "SUB", "MUL", "DIV", 
      "EXP", "SEPARATOR", "LPAREN", "RPAREN", "LBRACE", "RBRACE"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  minilangParserStaticData = staticData.release();
}

}

MiniLangParser::MiniLangParser(TokenStream *input) : MiniLangParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

MiniLangParser::MiniLangParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  MiniLangParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *minilangParserStaticData->atn, minilangParserStaticData->decisionToDFA, minilangParserStaticData->sharedContextCache, options);
}

MiniLangParser::~MiniLangParser() {
  delete _interpreter;
}

const atn::ATN& MiniLangParser::getATN() const {
  return *minilangParserStaticData->atn;
}

std::string MiniLangParser::getGrammarFileName() const {
  return "MiniLang.g4";
}

const std::vector<std::string>& MiniLangParser::getRuleNames() const {
  return minilangParserStaticData->ruleNames;
}

const dfa::Vocabulary& MiniLangParser::getVocabulary() const {
  return minilangParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView MiniLangParser::getSerializedATN() const {
  return minilangParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

MiniLangParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MiniLangParser::ProgramContext::EOF() {
  return getToken(MiniLangParser::EOF, 0);
}

std::vector<MiniLangParser::StatementContext *> MiniLangParser::ProgramContext::statement() {
  return getRuleContexts<MiniLangParser::StatementContext>();
}

MiniLangParser::StatementContext* MiniLangParser::ProgramContext::statement(size_t i) {
  return getRuleContext<MiniLangParser::StatementContext>(i);
}


size_t MiniLangParser::ProgramContext::getRuleIndex() const {
  return MiniLangParser::RuleProgram;
}


std::any MiniLangParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MiniLangVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

MiniLangParser::ProgramContext* MiniLangParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, MiniLangParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(21); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(20);
      statement();
      setState(23); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 1114196) != 0));
    setState(25);
    match(MiniLangParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

MiniLangParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MiniLangParser::AssignmentContext* MiniLangParser::StatementContext::assignment() {
  return getRuleContext<MiniLangParser::AssignmentContext>(0);
}

MiniLangParser::OutputContext* MiniLangParser::StatementContext::output() {
  return getRuleContext<MiniLangParser::OutputContext>(0);
}

MiniLangParser::InputContext* MiniLangParser::StatementContext::input() {
  return getRuleContext<MiniLangParser::InputContext>(0);
}

MiniLangParser::IfStatementContext* MiniLangParser::StatementContext::ifStatement() {
  return getRuleContext<MiniLangParser::IfStatementContext>(0);
}

MiniLangParser::WhileLoopContext* MiniLangParser::StatementContext::whileLoop() {
  return getRuleContext<MiniLangParser::WhileLoopContext>(0);
}

tree::TerminalNode* MiniLangParser::StatementContext::COMMENT() {
  return getToken(MiniLangParser::COMMENT, 0);
}


size_t MiniLangParser::StatementContext::getRuleIndex() const {
  return MiniLangParser::RuleStatement;
}


std::any MiniLangParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MiniLangVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

MiniLangParser::StatementContext* MiniLangParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 2, MiniLangParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(33);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(27);
      assignment();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(28);
      output();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(29);
      input();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(30);
      ifStatement();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(31);
      whileLoop();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(32);
      match(MiniLangParser::COMMENT);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignmentContext ------------------------------------------------------------------

MiniLangParser::AssignmentContext::AssignmentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MiniLangParser::AssignmentContext::IDENTIFIER() {
  return getToken(MiniLangParser::IDENTIFIER, 0);
}

MiniLangParser::ExpressionContext* MiniLangParser::AssignmentContext::expression() {
  return getRuleContext<MiniLangParser::ExpressionContext>(0);
}

tree::TerminalNode* MiniLangParser::AssignmentContext::SEPARATOR() {
  return getToken(MiniLangParser::SEPARATOR, 0);
}


size_t MiniLangParser::AssignmentContext::getRuleIndex() const {
  return MiniLangParser::RuleAssignment;
}


std::any MiniLangParser::AssignmentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MiniLangVisitor*>(visitor))
    return parserVisitor->visitAssignment(this);
  else
    return visitor->visitChildren(this);
}

MiniLangParser::AssignmentContext* MiniLangParser::assignment() {
  AssignmentContext *_localctx = _tracker.createInstance<AssignmentContext>(_ctx, getState());
  enterRule(_localctx, 4, MiniLangParser::RuleAssignment);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(35);
    match(MiniLangParser::IDENTIFIER);
    setState(36);
    match(MiniLangParser::T__0);
    setState(37);
    expression(0);
    setState(38);
    match(MiniLangParser::SEPARATOR);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- OutputContext ------------------------------------------------------------------

MiniLangParser::OutputContext::OutputContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MiniLangParser::OutputContext::LPAREN() {
  return getToken(MiniLangParser::LPAREN, 0);
}

tree::TerminalNode* MiniLangParser::OutputContext::STRING() {
  return getToken(MiniLangParser::STRING, 0);
}

tree::TerminalNode* MiniLangParser::OutputContext::RPAREN() {
  return getToken(MiniLangParser::RPAREN, 0);
}

tree::TerminalNode* MiniLangParser::OutputContext::SEPARATOR() {
  return getToken(MiniLangParser::SEPARATOR, 0);
}


size_t MiniLangParser::OutputContext::getRuleIndex() const {
  return MiniLangParser::RuleOutput;
}


std::any MiniLangParser::OutputContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MiniLangVisitor*>(visitor))
    return parserVisitor->visitOutput(this);
  else
    return visitor->visitChildren(this);
}

MiniLangParser::OutputContext* MiniLangParser::output() {
  OutputContext *_localctx = _tracker.createInstance<OutputContext>(_ctx, getState());
  enterRule(_localctx, 6, MiniLangParser::RuleOutput);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(40);
    match(MiniLangParser::T__1);
    setState(41);
    match(MiniLangParser::LPAREN);
    setState(42);
    match(MiniLangParser::STRING);
    setState(43);
    match(MiniLangParser::RPAREN);
    setState(44);
    match(MiniLangParser::SEPARATOR);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InputContext ------------------------------------------------------------------

MiniLangParser::InputContext::InputContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MiniLangParser::InputContext::IDENTIFIER() {
  return getToken(MiniLangParser::IDENTIFIER, 0);
}

tree::TerminalNode* MiniLangParser::InputContext::LPAREN() {
  return getToken(MiniLangParser::LPAREN, 0);
}

tree::TerminalNode* MiniLangParser::InputContext::STRING() {
  return getToken(MiniLangParser::STRING, 0);
}

tree::TerminalNode* MiniLangParser::InputContext::RPAREN() {
  return getToken(MiniLangParser::RPAREN, 0);
}

tree::TerminalNode* MiniLangParser::InputContext::SEPARATOR() {
  return getToken(MiniLangParser::SEPARATOR, 0);
}


size_t MiniLangParser::InputContext::getRuleIndex() const {
  return MiniLangParser::RuleInput;
}


std::any MiniLangParser::InputContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MiniLangVisitor*>(visitor))
    return parserVisitor->visitInput(this);
  else
    return visitor->visitChildren(this);
}

MiniLangParser::InputContext* MiniLangParser::input() {
  InputContext *_localctx = _tracker.createInstance<InputContext>(_ctx, getState());
  enterRule(_localctx, 8, MiniLangParser::RuleInput);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(46);
    match(MiniLangParser::IDENTIFIER);
    setState(47);
    match(MiniLangParser::T__0);
    setState(48);
    match(MiniLangParser::T__2);
    setState(49);
    match(MiniLangParser::LPAREN);
    setState(50);
    match(MiniLangParser::STRING);
    setState(51);
    match(MiniLangParser::RPAREN);
    setState(52);
    match(MiniLangParser::SEPARATOR);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IfStatementContext ------------------------------------------------------------------

MiniLangParser::IfStatementContext::IfStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MiniLangParser::ConditionContext* MiniLangParser::IfStatementContext::condition() {
  return getRuleContext<MiniLangParser::ConditionContext>(0);
}

std::vector<tree::TerminalNode *> MiniLangParser::IfStatementContext::LBRACE() {
  return getTokens(MiniLangParser::LBRACE);
}

tree::TerminalNode* MiniLangParser::IfStatementContext::LBRACE(size_t i) {
  return getToken(MiniLangParser::LBRACE, i);
}

std::vector<tree::TerminalNode *> MiniLangParser::IfStatementContext::RBRACE() {
  return getTokens(MiniLangParser::RBRACE);
}

tree::TerminalNode* MiniLangParser::IfStatementContext::RBRACE(size_t i) {
  return getToken(MiniLangParser::RBRACE, i);
}

std::vector<MiniLangParser::StatementContext *> MiniLangParser::IfStatementContext::statement() {
  return getRuleContexts<MiniLangParser::StatementContext>();
}

MiniLangParser::StatementContext* MiniLangParser::IfStatementContext::statement(size_t i) {
  return getRuleContext<MiniLangParser::StatementContext>(i);
}


size_t MiniLangParser::IfStatementContext::getRuleIndex() const {
  return MiniLangParser::RuleIfStatement;
}


std::any MiniLangParser::IfStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MiniLangVisitor*>(visitor))
    return parserVisitor->visitIfStatement(this);
  else
    return visitor->visitChildren(this);
}

MiniLangParser::IfStatementContext* MiniLangParser::ifStatement() {
  IfStatementContext *_localctx = _tracker.createInstance<IfStatementContext>(_ctx, getState());
  enterRule(_localctx, 10, MiniLangParser::RuleIfStatement);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(54);
    match(MiniLangParser::T__3);
    setState(55);
    condition(0);
    setState(56);
    match(MiniLangParser::LBRACE);
    setState(60);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 1114196) != 0)) {
      setState(57);
      statement();
      setState(62);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(63);
    match(MiniLangParser::RBRACE);
    setState(73);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == MiniLangParser::T__4) {
      setState(64);
      match(MiniLangParser::T__4);
      setState(65);
      match(MiniLangParser::LBRACE);
      setState(69);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & 1114196) != 0)) {
        setState(66);
        statement();
        setState(71);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(72);
      match(MiniLangParser::RBRACE);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- WhileLoopContext ------------------------------------------------------------------

MiniLangParser::WhileLoopContext::WhileLoopContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MiniLangParser::ConditionContext* MiniLangParser::WhileLoopContext::condition() {
  return getRuleContext<MiniLangParser::ConditionContext>(0);
}

tree::TerminalNode* MiniLangParser::WhileLoopContext::LBRACE() {
  return getToken(MiniLangParser::LBRACE, 0);
}

tree::TerminalNode* MiniLangParser::WhileLoopContext::RBRACE() {
  return getToken(MiniLangParser::RBRACE, 0);
}

std::vector<MiniLangParser::StatementContext *> MiniLangParser::WhileLoopContext::statement() {
  return getRuleContexts<MiniLangParser::StatementContext>();
}

MiniLangParser::StatementContext* MiniLangParser::WhileLoopContext::statement(size_t i) {
  return getRuleContext<MiniLangParser::StatementContext>(i);
}


size_t MiniLangParser::WhileLoopContext::getRuleIndex() const {
  return MiniLangParser::RuleWhileLoop;
}


std::any MiniLangParser::WhileLoopContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MiniLangVisitor*>(visitor))
    return parserVisitor->visitWhileLoop(this);
  else
    return visitor->visitChildren(this);
}

MiniLangParser::WhileLoopContext* MiniLangParser::whileLoop() {
  WhileLoopContext *_localctx = _tracker.createInstance<WhileLoopContext>(_ctx, getState());
  enterRule(_localctx, 12, MiniLangParser::RuleWhileLoop);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(75);
    match(MiniLangParser::T__5);
    setState(76);
    condition(0);
    setState(77);
    match(MiniLangParser::LBRACE);
    setState(81);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 1114196) != 0)) {
      setState(78);
      statement();
      setState(83);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(84);
    match(MiniLangParser::RBRACE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionContext ------------------------------------------------------------------

MiniLangParser::ExpressionContext::ExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t MiniLangParser::ExpressionContext::getRuleIndex() const {
  return MiniLangParser::RuleExpression;
}

void MiniLangParser::ExpressionContext::copyFrom(ExpressionContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- DoubleExprContext ------------------------------------------------------------------

tree::TerminalNode* MiniLangParser::DoubleExprContext::DOUBLE() {
  return getToken(MiniLangParser::DOUBLE, 0);
}

MiniLangParser::DoubleExprContext::DoubleExprContext(ExpressionContext *ctx) { copyFrom(ctx); }


std::any MiniLangParser::DoubleExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MiniLangVisitor*>(visitor))
    return parserVisitor->visitDoubleExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- MulDivExprContext ------------------------------------------------------------------

std::vector<MiniLangParser::ExpressionContext *> MiniLangParser::MulDivExprContext::expression() {
  return getRuleContexts<MiniLangParser::ExpressionContext>();
}

MiniLangParser::ExpressionContext* MiniLangParser::MulDivExprContext::expression(size_t i) {
  return getRuleContext<MiniLangParser::ExpressionContext>(i);
}

tree::TerminalNode* MiniLangParser::MulDivExprContext::MUL() {
  return getToken(MiniLangParser::MUL, 0);
}

tree::TerminalNode* MiniLangParser::MulDivExprContext::DIV() {
  return getToken(MiniLangParser::DIV, 0);
}

MiniLangParser::MulDivExprContext::MulDivExprContext(ExpressionContext *ctx) { copyFrom(ctx); }


std::any MiniLangParser::MulDivExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MiniLangVisitor*>(visitor))
    return parserVisitor->visitMulDivExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- VarExprContext ------------------------------------------------------------------

tree::TerminalNode* MiniLangParser::VarExprContext::IDENTIFIER() {
  return getToken(MiniLangParser::IDENTIFIER, 0);
}

MiniLangParser::VarExprContext::VarExprContext(ExpressionContext *ctx) { copyFrom(ctx); }


std::any MiniLangParser::VarExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MiniLangVisitor*>(visitor))
    return parserVisitor->visitVarExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- IntExprContext ------------------------------------------------------------------

tree::TerminalNode* MiniLangParser::IntExprContext::INT() {
  return getToken(MiniLangParser::INT, 0);
}

MiniLangParser::IntExprContext::IntExprContext(ExpressionContext *ctx) { copyFrom(ctx); }


std::any MiniLangParser::IntExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MiniLangVisitor*>(visitor))
    return parserVisitor->visitIntExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ParenExprContext ------------------------------------------------------------------

tree::TerminalNode* MiniLangParser::ParenExprContext::LPAREN() {
  return getToken(MiniLangParser::LPAREN, 0);
}

MiniLangParser::ExpressionContext* MiniLangParser::ParenExprContext::expression() {
  return getRuleContext<MiniLangParser::ExpressionContext>(0);
}

tree::TerminalNode* MiniLangParser::ParenExprContext::RPAREN() {
  return getToken(MiniLangParser::RPAREN, 0);
}

MiniLangParser::ParenExprContext::ParenExprContext(ExpressionContext *ctx) { copyFrom(ctx); }


std::any MiniLangParser::ParenExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MiniLangVisitor*>(visitor))
    return parserVisitor->visitParenExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ExpExprContext ------------------------------------------------------------------

std::vector<MiniLangParser::ExpressionContext *> MiniLangParser::ExpExprContext::expression() {
  return getRuleContexts<MiniLangParser::ExpressionContext>();
}

MiniLangParser::ExpressionContext* MiniLangParser::ExpExprContext::expression(size_t i) {
  return getRuleContext<MiniLangParser::ExpressionContext>(i);
}

tree::TerminalNode* MiniLangParser::ExpExprContext::EXP() {
  return getToken(MiniLangParser::EXP, 0);
}

MiniLangParser::ExpExprContext::ExpExprContext(ExpressionContext *ctx) { copyFrom(ctx); }


std::any MiniLangParser::ExpExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MiniLangVisitor*>(visitor))
    return parserVisitor->visitExpExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- AddSubExprContext ------------------------------------------------------------------

std::vector<MiniLangParser::ExpressionContext *> MiniLangParser::AddSubExprContext::expression() {
  return getRuleContexts<MiniLangParser::ExpressionContext>();
}

MiniLangParser::ExpressionContext* MiniLangParser::AddSubExprContext::expression(size_t i) {
  return getRuleContext<MiniLangParser::ExpressionContext>(i);
}

tree::TerminalNode* MiniLangParser::AddSubExprContext::ADD() {
  return getToken(MiniLangParser::ADD, 0);
}

tree::TerminalNode* MiniLangParser::AddSubExprContext::SUB() {
  return getToken(MiniLangParser::SUB, 0);
}

MiniLangParser::AddSubExprContext::AddSubExprContext(ExpressionContext *ctx) { copyFrom(ctx); }


std::any MiniLangParser::AddSubExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MiniLangVisitor*>(visitor))
    return parserVisitor->visitAddSubExpr(this);
  else
    return visitor->visitChildren(this);
}

MiniLangParser::ExpressionContext* MiniLangParser::expression() {
   return expression(0);
}

MiniLangParser::ExpressionContext* MiniLangParser::expression(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  MiniLangParser::ExpressionContext *_localctx = _tracker.createInstance<ExpressionContext>(_ctx, parentState);
  MiniLangParser::ExpressionContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 14;
  enterRecursionRule(_localctx, 14, MiniLangParser::RuleExpression, precedence);

    size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(94);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case MiniLangParser::LPAREN: {
        _localctx = _tracker.createInstance<ParenExprContext>(_localctx);
        _ctx = _localctx;
        previousContext = _localctx;

        setState(87);
        match(MiniLangParser::LPAREN);
        setState(88);
        expression(0);
        setState(89);
        match(MiniLangParser::RPAREN);
        break;
      }

      case MiniLangParser::IDENTIFIER: {
        _localctx = _tracker.createInstance<VarExprContext>(_localctx);
        _ctx = _localctx;
        previousContext = _localctx;
        setState(91);
        match(MiniLangParser::IDENTIFIER);
        break;
      }

      case MiniLangParser::INT: {
        _localctx = _tracker.createInstance<IntExprContext>(_localctx);
        _ctx = _localctx;
        previousContext = _localctx;
        setState(92);
        match(MiniLangParser::INT);
        break;
      }

      case MiniLangParser::DOUBLE: {
        _localctx = _tracker.createInstance<DoubleExprContext>(_localctx);
        _ctx = _localctx;
        previousContext = _localctx;
        setState(93);
        match(MiniLangParser::DOUBLE);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    _ctx->stop = _input->LT(-1);
    setState(107);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(105);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
        case 1: {
          auto newContext = _tracker.createInstance<MulDivExprContext>(_tracker.createInstance<ExpressionContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleExpression);
          setState(96);

          if (!(precpred(_ctx, 7))) throw FailedPredicateException(this, "precpred(_ctx, 7)");
          setState(97);
          antlrcpp::downCast<MulDivExprContext *>(_localctx)->op = _input->LT(1);
          _la = _input->LA(1);
          if (!(_la == MiniLangParser::MUL

          || _la == MiniLangParser::DIV)) {
            antlrcpp::downCast<MulDivExprContext *>(_localctx)->op = _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(98);
          expression(8);
          break;
        }

        case 2: {
          auto newContext = _tracker.createInstance<AddSubExprContext>(_tracker.createInstance<ExpressionContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleExpression);
          setState(99);

          if (!(precpred(_ctx, 6))) throw FailedPredicateException(this, "precpred(_ctx, 6)");
          setState(100);
          antlrcpp::downCast<AddSubExprContext *>(_localctx)->op = _input->LT(1);
          _la = _input->LA(1);
          if (!(_la == MiniLangParser::ADD

          || _la == MiniLangParser::SUB)) {
            antlrcpp::downCast<AddSubExprContext *>(_localctx)->op = _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(101);
          expression(7);
          break;
        }

        case 3: {
          auto newContext = _tracker.createInstance<ExpExprContext>(_tracker.createInstance<ExpressionContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleExpression);
          setState(102);

          if (!(precpred(_ctx, 5))) throw FailedPredicateException(this, "precpred(_ctx, 5)");
          setState(103);
          match(MiniLangParser::EXP);
          setState(104);
          expression(6);
          break;
        }
